rust/cubesqlplanner/cubesqlplanner/src/tests/snapshots/cubesqlplanner__tests__pre_aggregation_sql_generation__multi_level_all_base_measures_full_match.snap
---
source: cubesqlplanner/src/tests/pre_aggregation_sql_generation.rs
expression: sql
---
SELECT "orders__status" "orders__status", "orders__city" "orders__city", sum("orders__total_amount") / sum("orders__count") / max("orders__max_amount") "orders__multi_level_measure" 
FROM  orders__all_base_measures_rollup  AS "orders__all_base_measures_rollup"
GROUP BY 1, 2
ORDER BY  3  DESC
