rust/cubesqlplanner/cubesqlplanner/src/tests/snapshots/cubesqlplanner__tests__pre_aggregation_sql_generation__multi_level_all_base_measures_full_match_pg_result.snap
---
source: cubesqlplanner/src/tests/pre_aggregation_sql_generation.rs
expression: result
---
orders__status | orders__city | orders__multi_level_measure
---------------+--------------+----------------------------
completed      | Chicago      | 1.00000000000000000000     
cancelled      | Chicago      | 1.00000000000000000000     
pending        | Chicago      | 1.00000000000000000000     
pending        | Boston       | 1.00000000000000000000     
completed      | New York     | 0.75000000000000000000     
pending        | New York     | 0.65000000000000000000     
completed      | Boston       | 0.62500000000000000000
