rust/cubesqlplanner/cubesqlplanner/src/tests/snapshots/cubesqlplanner__tests__pre_aggregation_sql_generation__multi_level_all_base_measures_partial_match_pg_result.snap
---
source: cubesqlplanner/src/tests/pre_aggregation_sql_generation.rs
expression: result
---
orders__status | orders__multi_level_measure
---------------+----------------------------
cancelled      | 1.00000000000000000000     
pending        | 0.73125000000000000000     
completed      | 0.46250000000000000000
