rust/cubesqlplanner/cubesqlplanner/src/tests/snapshots/cubesqlplanner__tests__pre_aggregation_sql_generation__multi_level_calculated_measure_full_match.snap
---
source: cubesqlplanner/src/tests/pre_aggregation_sql_generation.rs
expression: sql
---
SELECT "orders__status" "orders__status", "orders__city" "orders__city", sum("orders__multi_level_measure") "orders__multi_level_measure" 
FROM  orders__calculated_measure_rollup  AS "orders__calculated_measure_rollup"
GROUP BY 1, 2
ORDER BY  3  DESC
