rust/cubesqlplanner/cubesqlplanner/src/tests/snapshots/cubesqlplanner__tests__pre_aggregation_sql_generation__multi_stage_count_distinct_sum_by_quarter_with_pre_agg_pg_result.snap
---
source: cubesqlplanner/src/tests/pre_aggregation_sql_generation.rs
expression: result
---
coach__count_distinct__sum_by_quarter
-------------------------------------
28
