rust/cubesqlplanner/cubesqlplanner/src/tests/snapshots/cubesqlplanner__tests__pre_aggregation_sql_generation__multi_stage_separate_pre_aggs_pg_result.snap
---
source: cubesqlplanner/src/tests/pre_aggregation_sql_generation.rs
assertion_line: 873
expression: result
snapshot_kind: text
---
orders__count_reduce_status | orders__revenue_reduce_status
----------------------------+------------------------------
7                           | 1750.00
