rust/cubesqlplanner/cubesqlplanner/src/tests/snapshots/cubesqlplanner__tests__pre_aggregation_sql_generation__partial_match_main_rollup.snap
---
source: cubesqlplanner/src/tests/pre_aggregation_sql_generation.rs
expression: sql
---
SELECT "orders__status" "orders__status", sum("orders__count") "orders__count" 
FROM  orders__main_rollup  AS "orders__main_rollup"
GROUP BY 1
ORDER BY  2  DESC
