rust/cubesqlplanner/cubesqlplanner/src/tests/snapshots/cubesqlplanner__tests__pre_aggregation_sql_generation__partial_match_main_rollup_pg_result.snap
---
source: cubesqlplanner/src/tests/pre_aggregation_sql_generation.rs
expression: result
---
orders__status | orders__count
---------------+--------------
completed      | 5            
pending        | 4            
cancelled      | 1
